add facade , resolver but not worke

--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.3",
+    "@ngxs-labs/dispatch-decorator": "^5.0.0",
+    "@ngxs/devtools-plugin": "^3.8.2-dev.master-e0981de",
+    "@ngxs/logger-plugin": "^3.8.2-dev.master-e0981de",
+    "@ngxs/store": "^3.8.2",
     "express": "^4.18.2",
     "primeng": "^17.0.0-rc.1",
     "rxjs": "~7.8.0",
